--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,20 @@
   "ignore": [
     "**/.*",
     "node_modules",
-    "components"
-  ]
+    "components",
+    "bower_components",
+    "public/components",
+    "test",
+    "tests"
+  ],
+  "homepage": "https://github.com/fridaymedia/ski-motion",
+  "authors": [
+    "Christopher Atkins <christopherlionelatkins@gmail.com>"
+  ],
+  "description": "Leap motion webrtc game",
+  "license": "MIT",
+  "private": true,
+  "dependencies": {
+    "bootstrap": "~3.1.0"
+  }
 }
