--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "coffee-script": "~1.7.1",
     "less": "~1.6.2",
     "easyrtc": "~1.0.8",
-    "socket.io": "~0.9.16"
+    "socket.io": "~0.9.16",
+    "grunt-debug": "0.0.3"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
@@ -22,6 +23,7 @@
     "grunt-contrib-compass": "~0.6.0",
     "request": "~2.27.0",
     "time-grunt": "~0.1.1",
-    "load-grunt-tasks": "~0.2.0"
+    "load-grunt-tasks": "~0.2.0",
+    "grunt-debug-task": "~0.1.3"
   }
 }
