--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
     "bootstrap": "~3.1.0",
     "jquery": "~2.1.0",
     "leapjs": "~0.3.0",
-    "socket.io-client": "~0.9.16"
+    "socket.io-client": "~0.9.16",
+    "d3": "~3.4.1"
   }
 }
