--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,8 @@
     "jquery": "~2.1.0",
     "leapjs": "~0.3.0",
     "socket.io-client": "~0.9.16",
-    "underscore": "~1.5.2"
+    "underscore": "~1.5.2",
+    "d3": "~3.4.1"
+
   }
 }
